# dynalock

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs
src/providers/: dynamodb.rs  mock.rs  mod.rs
src/providers/dynamodb/: mod.rs  tests.rs
test_resources/dynamodb/: get_lock_item_success.json  update_lock_condition_fail.json
