[package]
name = "dynalock"
description = "Distributed locking algorithm with support for DynamoDB"
version = "0.1.0"
license = "MIT"
authors = ["Amr Ali <amr@chorus.one>"]
homepage = "https://github.com/chorusone/dynalock"
repository = "https://github.com/chorusone/dynalock/tree/master"
readme = "README.md"
categories = ["algorithms", "data-structures", "asynchronous"]
keywords = ["distributed-systems", "locking", "aws", "dynamodb"]

[dependencies]
maplit = { version = "1.0.1" }
uuid = { version = "0.6.3", features = ["v4"], optional = true }
rusoto_core = { version = "0.32.0", optional = true }
rusoto_dynamodb = { version = "0.32.0", optional = true }

[features]
default = ["dynamodb"]
dynamodb = ["rusoto_core", "rusoto_dynamodb", "uuid"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = "abort"
