[package]
name = "dynalock"
description = "A lease based distributed locking algorithm with support for DynamoDB"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Amr Ali <amr@chorus.one>"]
homepage = "https://github.com/chorusone/dynalock"
repository = "https://github.com/chorusone/dynalock/tree/master"
readme = "README.md"
categories = ["algorithms", "data-structures", "asynchronous"]
keywords = ["distributed", "locking", "dynamodb", "lease", "advisory"]

[badges]
travis-ci = { repository = "ChorusOne/dynalock", branch = "master" }

[features]
default = ["dynamodb"]
dynamodb = ["rusoto_core", "rusoto_dynamodb", "uuid"]

[dependencies]
log = { version = "^0.4" }
maplit = { version = "^1.0" }
uuid = { version = "^0.6", features = ["v4"], optional = true }
rusoto_core = { version = "^0.32", optional = true }
rusoto_dynamodb = { version = "^0.32", optional = true }

[dev-dependencies]
rusoto_mock = { version = "^0.26" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = "abort"
